--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -17,7 +17,7 @@
 .leftBarContent {
     display: flex;
     width: 100%;
-    top: 20px;
+    /*top: 20px;*/
     position: relative;
     justify-content: flex-end;
     /*padding: 20px;*/
