--- a/src/components/recommendations/recommendations.module.css
+++ b/src/components/recommendations/recommendations.module.css
@@ -54,4 +54,9 @@
     background-color: transparent;
     font-size: 15px;
     cursor: pointer;
+    font-weight: lighter;
+}
+
+.actions:hover {
+    background-color: transparent;
 }
