--- a/src/components/common/button/button.module.css
+++ b/src/components/common/button/button.module.css
@@ -2,4 +2,22 @@
     border-radius: 40px;
     border: none;
     gap: 16px;
+    padding: 8px 16px;
+    color: white;
+    font-size: 14px;
+    cursor: pointer;
+    font-weight: bold;
+    outline: none;
+    background-color: #4A99E9;
+    transition: all 0.3s ease-in-out;
+}
+
+.button:disabled {
+    background-color: #A5CCF4;
+    color: #FFFFFF;
+    cursor: not-allowed;
+}
+
+.button:hover {
+    background-color: #428AD2;
 }
