--- a/src/components/common/tweet-actions/tweet-actions.module.css
+++ b/src/components/common/tweet-actions/tweet-actions.module.css
@@ -7,9 +7,17 @@
 }
 
 .actionButton {
+    display: flex;
     border: none;
     background-color: transparent;
     transition: all 0.3s ease;
+    justify-content: center;
+    align-items: center;
+}
+
+.actionIcon {
+    height: 16px;
+    fill: #566370;
 }
 
 .liked {
