--- a/src/components/nav-bar/nav-bar.module.css
+++ b/src/components/nav-bar/nav-bar.module.css
@@ -21,6 +21,7 @@
 
 
 .iconTwitter {
+    padding-left: 16px;
     height: 30px;
     width: 30px;
 }
@@ -40,6 +41,7 @@
     width: 100%;
     background-color: transparent;
     overflow: hidden;
+    gap: 16px
 }
 
 .button:hover {
