deleted redundant files

--- a/src/components/common/tweet-actions/tweet-actions.module.css
+++ b/src/components/common/tweet-actions/tweet-actions.module.css
@@ -21,9 +21,9 @@
 }
 
 .liked {
-    color: #e0245e; /* Color para like activo */
+    color: #e0245e;
 }
 
 .retweeted {
-    color: #1da1f2; /* Color para retweet activo */
+    color: #1da1f2;
 }
