--- a/src/components/nav-bar/nav-bar.module.css
+++ b/src/components/nav-bar/nav-bar.module.css
@@ -66,7 +66,7 @@
 /* Ocultar texto en pantallas pequeñas */
 @media (max-width: 768px) {
     .button {
-        justify-content: center; /* Centrar el icono */
+        justify-content: center;
         padding: 16px;
     }
 
@@ -75,6 +75,6 @@
     }
 
     .button > span {
-        display: none; /* Ocultar el texto */
+        display: none;
     }
 }
