--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -8,7 +8,7 @@
     top: 0;
     bottom: 0;
     /*padding: 20px;*/
-    overflow: hidden; /* Para hacer scroll dentro de la sidebar si es necesario */
+    overflow: hidden;
     flex-grow: 1;
     height: 100vh;
     padding-left: 1rem;
@@ -32,7 +32,7 @@
     bottom: 0;
     right: 0;
     /*padding: 20px;*/
-    overflow: auto; /* Para hacer scroll dentro de la sidebar si es necesario */
+    overflow: auto;
     flex-grow: 1;
     height: 100vh;
 }
@@ -49,82 +49,3 @@
     height: 100%;
     background-color: #FFFFFF;
 }
-
-/*!* Media queries para pantallas pequeñas *!*/
-/*@media (max-width: 768px) {*/
-/*    .wrapper {*/
-/*        flex-direction: column;*/
-/*        width: 100%;*/
-/*        height: 100vh;*/
-/*        overflow: hidden;*/
-/*    }*/
-
-/*    .leftBar {*/
-/*        width: 100%;*/
-/*        height: 48px;*/
-/*        background-color: #ff0000;*/
-/*        order: 2; !* Aparece después del feed *!*/
-/*    }*/
-
-/*    .rightBar {*/
-/*        display: none; !* Oculta la barra derecha en pantallas pequeñas *!*/
-/*    }*/
-
-/*    .feed {*/
-/*        display: flex;*/
-/*        width: 100%;*/
-/*        height: auto;*/
-/*        order: 1; !* Aparece antes de la barra izquierda *!*/
-/*        flex-grow: 1;*/
-/*    }*/
-
-/*    !* Estilo del menú de navegación en la parte inferior *!*/
-/*    .leftBarMobile {*/
-/*        display: flex;*/
-/*        flex-direction: row;*/
-/*        justify-content: space-around;*/
-/*        width: 100%;*/
-/*        background-color: #ff0000;*/
-/*        padding: 10px;*/
-/*    }*/
-/*}*/
-
-/*!* Media queries para pantallas pequeñas *!*/
-/*@media (max-width: 768px) {*/
-/*    .wrapper {*/
-/*        flex-direction: column;*/
-/*        width: 100%;*/
-/*        height: 100vh;*/
-/*        overflow: hidden;*/
-/*    }*/
-
-/*    .leftBar {*/
-/*        width: 100%;*/
-/*        height: 48px;*/
-/*        background-color: #ff0000;*/
-/*        order: 2; !* Aparece después del feed *!*/
-/*    }*/
-
-/*    .rightBar {*/
-/*        display: none; !* Oculta la barra derecha en pantallas pequeñas *!*/
-/*    }*/
-
-/*    .feed {*/
-/*        display: flex;*/
-/*        width: 100%;*/
-/*        height: auto;*/
-/*        background-color: #21ff00;*/
-/*        order: 1; !* Aparece antes de la barra izquierda *!*/
-/*        flex-grow: 1;*/
-/*    }*/
-
-/*    !* Estilo del menú de navegación en la parte inferior *!*/
-/*    .leftBarMobile {*/
-/*        display: flex;*/
-/*        flex-direction: row;*/
-/*        justify-content: space-around;*/
-/*        width: 100%;*/
-/*        background-color: #ff0000;*/
-/*        padding: 10px;*/
-/*    }*/
-/*}*/
